--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     </head>
     <body class="home">
         <header>
-            <a href="/home.html"><h1>The Cloud Group</h1></a>
+            <a href="/index.html"><h1>The Cloud Group</h1></a>
             <nav>
                 <ul class="nav_links">
                     <li><a href="/about.html">About</a></li>
