--- a/IaaS.html
+++ b/IaaS.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Cloud Group - IaaS</title>
-        <link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="/css/IaaS.css">
+        <link rel="stylesheet" href="https://github.com/ctlaverick/CloudComputingWeb/css/style.css">
+        <link rel="stylesheet" href="https://github.com/ctlaverick/CloudComputingWeb/css/IaaS.css">
     </head>
     <body class="home">
         <header>
