--- a/home.html
+++ b/home.html
@@ -9,11 +9,11 @@
     </head>
     <body class="home">
         <header>
-            <a href="/index.html"><h1>The Cloud Group</h1></a>
+            <a href="/home.html"><h1>The Cloud Group</h1></a>
             <nav>
                 <ul class="nav_links">
                     <li><a href="/about.html">About</a></li>
-                    <li><a href="/services.html">Services</a>
+                    <li><a href="/services">Types</a>
                         <div>
                             <a href="/IaaS.html">IasS - Infrastructure</a>
                             <a href="#">SasS - Software</a>
@@ -21,7 +21,7 @@
                             <a href="#">Serverless Computing</a>
                         <div>
                     </li>
-                    <li><a href="#">Resources</a></li>
+                    <li><a href="#">Services</a></li>
                 </ul>
             </nav>
             <a href="#" class="cta"><button>Compare</button></a>
