--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Cloud Group - About</title>
-        <link rel="stylesheet" href="https://github.com/ctlaverick/CloudComputingWeb/css/style.css">
-        <link rel="stylesheet" href="https://github.com/ctlaverick/CloudComputingWeb/css/about.css">
+        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/about.css">
     </head>
     <body>
         <header>
