--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Cloud Group - Home</title>
-        <link rel="stylesheet" href="https://github.com/ctlaverick/CloudComputingWeb/css/style.css">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body class="home">
         <header>
