--- a/IaaS.html
+++ b/IaaS.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Cloud Group - IaaS</title>
         <link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="/css/IaaS.css">
+        <link rel="stylesheet" href="/css/Service-Style.css">
     </head>
     <body class="home">
         <header>
@@ -18,8 +18,8 @@
                         <div>
                             <a href="/IaaS.html">IasS - Infrastructure</a>
                             <a href="/SaaS.html">SasS - Software</a>
-                            <a href=/PaaS.html">PasS - Platform</a>
-                            <a href="serverless-computing.html">Serverless Computing</a>
+                            <a href="/PaaS.html">PasS - Platform</a>
+                            <a href="/serverless-computing.html">Serverless Computing</a>
                         <div>
                     </li>
                     <li><a href="/resources.html">Resources</a></li>
@@ -32,11 +32,43 @@
                 <h1>Infrastructure as a Service</h1>
             </div>
         </div>
-        <div>
-            <h1>What is Infrastructure as a Servics?</h1>
-        </div>
-        <div>
-            <h1>The Benefits of IaaS</h1>
-        </div>
+        <main>
+            <div class="what">
+                <h1>What is Infrastructure as a Service?</h1>
+                <p>Infrastrucutre as a Service (IaaS) is a cloud computing service which provides virtualised computer resources such as compute, storage and networking. In IaaS, the cloud provider will manage the IT infrastructure including storage, server and networking resources and give customers access to these resources via virtual machines on pay as you go system. IaaS enables customers to scale the resources their paying for depending on demand and allows customers to use resources without paying a high upfront cost to own the infrastrucutre. It is a perfect cloud service to use for temporary or experimental work</p>
+            </div>
+            <div class="pros">
+                <h1>The Benefits of IaaS</h1>
+                <ul>
+                    <li>Doesn't require a large upfront cost to buy infrastrucutre</li>
+                    <li>Only pay for the resources you need reducing costs during development and deployment</li>
+                    <li>Quick and easy to change the amount of resources you pay for</li>
+                    <li>You do not need to perform maintenance or manage the infrastrucutre</li>
+                    <li>There is an increase in reliability due to cloud infrastrucutre being designed to have no single point of failure and built in redundency</li>
+                </ul>
+            </div>
+            <div class="cons">
+                <h1>The Disadvantages of IaaS</h1>
+                <ul>
+                    <li>If you do not monitor the amount of resources you are using you may be suprised with a larger than expected bill</li>
+                    <li>Using a providers infrastrucutre can become a problem due to a lack of transparency on how the infrastrucutre is set up</li>
+                    <li>If a provider has another customer using lots of resources it may cause a decrease in performance due to a large workload on a shared system</li>
+                    <li>You may become dependent on the provider</li>
+                    <li>Relying on a provider to keep your data secure which may not be possible if working on sensetive information</li>
+                </ul>
+            </div>
+            <div class="uses">
+                <h1>Uses of IaaS</h1>
+                <p>IaaS offers a large range of use cases that can be benefitical, here are some of them:</p>
+                <ul>
+                    <li>Testing and development</li>
+                    <li>Big data analysis</li>
+                    <li>Handling spikes in traffic</li>
+                    <li>Hosting websites</li>
+                    <li>Web applications</li>
+                    <li>Data storage, backup and recovery</li>
+                </ul>
+            </div>
+        </main>
     </body>
 </html>
