--- a/home.html
+++ b/home.html
@@ -13,15 +13,15 @@
             <nav>
                 <ul class="nav_links">
                     <li><a href="/about.html">About</a></li>
-                    <li><a href="/services">Types</a>
+                    <li><a href="/services.html">Services</a>
                         <div>
                             <a href="/IaaS.html">IasS - Infrastructure</a>
-                            <a href="#">SasS - Software</a>
-                            <a href="#">PasS - Platform</a>
-                            <a href="#">Serverless Computing</a>
+                            <a href="/SaaS.html">SasS - Software</a>
+                            <a href="/PaaS.html">PasS - Platform</a>
+                            <a href="/serverless-computing.html">Serverless Computing</a>
                         <div>
                     </li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="/resources.html">Resources</a></li>
                 </ul>
             </nav>
             <a href="#" class="cta"><button>Compare</button></a>
