--- a/services.html
+++ b/services.html
@@ -18,8 +18,8 @@
                         <div>
                             <a href="/IaaS.html">IasS - Infrastructure</a>
                             <a href="/SaaS.html">SasS - Software</a>
-                            <a href=/PaaS.html">PasS - Platform</a>
-                            <a href="serverless-computing.html">Serverless Computing</a>
+                            <a href="/PaaS.html">PasS - Platform</a>
+                            <a href="/serverless-computing.html">Serverless Computing</a>
                         <div>
                     </li>
                     <li><a href="/resources.html">Resources</a></li>
@@ -53,7 +53,7 @@
                 <h1>Serverless Computing</h1>
                 <p>Serverless Computing is a type of cloud computing that lets the customer focus on the front-end development by handling everything else. The provider will handle the cloud infrastructure required to run the application, scale the resources depending on the demand, maintain the system and is responsible for security, capacity management and system monitoring </p>
                 <div class="morebutton">
-                    <a href="/Serverless.html">Learn More</a>
+                    <a href="/serverless-computing.html">Learn More</a>
                 </div>
             </div>
         </main>
