--- a/about.html
+++ b/about.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>The Cloud Group - About</title>
+        <title>The Cloud Group - Services</title>
         <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="/css/about.css">
     </head>
-    <body>
+    <body class="home">
         <header>
             <a href="/home.html"><h1>The Cloud Group</h1></a>
             <nav>
@@ -27,18 +27,16 @@
             </nav>
             <a href="#" class="cta"><button>Compare</button></a>
         </header>
-        <main class="about-container">
-            <div class="About-Start">
-                <h1>What is cloud computing?</h1>
+        <main>
+            <div class="what">
+                <h1>What is Cloud Computing?</h1>
                 <p>Simply put cloud computing is the abillity to access and utilise computer hardware and software through the internet. The cloud refers to the phsyical servers (computers) that are accessed during cloud computer services. There are many services cloud computing offers the most common being cloud storage where you can store data on a cloud and access it from anywhere with an internet connection.</p>
-                <!-- <p>Cloud computing is the on demmand access to computer hardware or software through the internet. This allows customers to access their services from anywhere with a connection to the internet. Cloud computing is most commonly used for data storage but can also be used for networking, databases, software, analytics and intelligence</p> -->
             </div>
-            <div class="image1">
-                <img src="/images/CloudComputing2.jpeg" alt="cloud computing image">
+            <div class="image">
+                <img src="/images/Architecture.png" alt="Cloud Computing Architecture">
             </div>
-
             <div class="clouds">
-                <h1>There are different Types of clouds</h1>
+                <h1>The Different Types of Clouds</h1>
                 <ul>
                     <li>Public Cloud - A cloud service available to multiple customers where the cloud resources, such as software and hardware, is provided by a third-party</li>
                     <li>Private Cloud - Where all cloud resources are dedicated to a single specific customer and accessible only by them</li>
@@ -46,59 +44,36 @@
                     <li>Multicloud and Hybrid Multicloud - The use of two or more diferent clouds such as a email service from one cloud and data storage from another </li>
                 </ul>
             </div>
-
-            <div class="uses">
-                <h1>The Uses of Cloud Computing</h1>
+            <div class="pros">
+                <h1>The Benefits of Cloud Computing</h1>
+                <ul>
+                    <li>Typically cloud computing is cheaper than buying lots of physical hardware and the necessary staff to maintain the hardware</li>
+                    <li>Easy and fast to scale the neccesary resources you need as your needs change</li>
+                    <li>A reputable cloud computing company will be reliable</li>
+                    <li>Most cloud computing companies use the latest technology giving you the best possible performance</li>
+                    <li>Most cloud computing companies keep your data encrypted so your data is secure</li>
+                    <li>Most cloud computing companies keep your data backed up improving the chance of data recovery</li>
+                </ul>
             </div>
-
-            <div class="pros-cons">
-                <h1>The Advantages and Disadvantages</h1>
-                <table>
-                    <tr>
-                        <th>Advantages</th>
-                        <th>Disadvantages</th>
-                    </tr>
-                    <tr>
-                        <td>Typically cloud computing is cheaper than buying lots of physical hardware and the necessary staff to maintain the hardware</td>
-                        <td>You do not own the hardware</td>
-                    </tr>
-                    <tr>
-                        <td>Easy and fast to scale the neccesary resources you need as your needs change</td>
-                        <td>You are relying on the cloud computing company to maintain their hardware</td>
-                    </tr>
-                    <tr>
-                        <td>A reputable cloud computing company will be reliable</td>
-                        <td>You are relying on the company to keep your data safe and secure</td>
-                    </tr>
-                    <tr>
-                        <td>Most cloud computing companies use the latest technology giving you the best possible performance</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>Most cloud computing companies keep your data encrypted</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>Most cloud computing companies keep your data backed up</td>
-                        <td>3</td>
-                    </tr>
-                </table>
+            <div class="cons">
+                <h1>The Drawbacks of Cloud Computing</h1>
+                <ul>
+                    <li>Using a cloud provider means you will have restrictions on what you can control</li>
+                    <li>Due to being internet based you are at risk of server and internet outages</li>
+                    <li>Even with the best security standards storing data with a cloud provider has risks</li>
+                    <li>It is not easy to switch between cloud providers causing companies to be stuck with the same provider</li>
+                    <li>The pay-as-you-go model can cause unexpected large bills if you do not monitor the amount of resources you require</li>
+                    <li>For large workloads you will require a sufficent internet connection to transfer and recieve data quickly and efficiently</li>
+                </ul>
             </div>
-
-            <div class="Types">
-                <h1>There are 4 Types of Cloud Computing</h1>
-            </div>
-            <div class="IaaS">
-                <a href="#">Infrastructure as a service (IaaS)</a>
-            </div>
-            <div class="PaaS">
-                <a href="#">Platform as a service (PaaS)</a>
-            </div>
-            <div class="SaaS">
-                <a href="#">Software as a service (SaaS)</a>
-            </div>
-            <div class="ServComp">
-                <a href="#">Serverless Computing </a>
+            <div class="services">
+                <h1>The Main Cloud Computing Services :</h1>
+                <div>
+                    <a href="/IaaS.html">Infrastructure as a service (IaaS)</a>
+                    <a href="/PaaS.html">Platform as a service (PaaS)</a>
+                    <a href="/SaaS.html">Software as a service (SaaS)</a>
+                    <a href="/serverless-computing.html">Serverless Computing </a>
+                </div>
             </div>
         </main>
     </body>
