Compare added | Website v1 done

--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
                     <li><a href="/resources.html">Resources</a></li>
                 </ul>
             </nav>
-            <a href="#" class="cta"><button>Compare</button></a>
+            <a href="/compare.html" class="cta"><button>Compare</button></a>
         </header>
         <main>
             <div class="Home-Grid">
