--- a/resources.html
+++ b/resources.html
@@ -1,5 +1,78 @@
-Definitions with references maybe?
-what is compute?
-aws
-azure
-cloud
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>The Cloud Group - Resources</title>
+        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/resources.css">
+    </head>
+    <body class="Resource-Page">
+        <header>
+            <a href="/home.html"><h1>The Cloud Group</h1></a>
+            <nav>
+                <ul class="nav_links">
+                    <li><a href="/about.html">About</a></li>
+                    <li><a href="/services.html">Services</a>
+                        <div>
+                            <a href="/IaaS.html">IasS - Infrastructure</a>
+                            <a href="/SaaS.html">SasS - Software</a>
+                            <a href="/PaaS.html">PasS - Platform</a>
+                            <a href="/serverless-computing.html">Serverless Computing</a>
+                        <div>
+                    </li>
+                    <li><a href="/resources.html">Resources</a></li>
+                </ul>
+            </nav>
+            <a href="/compare.html" class="cta"><button>Compare</button></a>
+        </header>
+        <div class="resource-image">
+            <div class="image-text">
+                <h1>Welcome to the Resource Center</h1>
+                <h2>Here you will find videos  to quickly explain topics, links to further resources and a definition list to help you understand cloud computing terminology</h2>
+            </div>
+        </div>
+        <main>
+            
+            <div class="Cloud Explained">
+                <!-- <h1>Cloud Computing Explained in 6 Minutes by Simplilearn</h1> -->
+                <iframe src="https://www.youtube.com/embed/M988_fsOSWo" frameborder="0" alt="Cloud Computing Explained in 6 Minutes by Simplilearn"></iframe>
+            </div>
+            <div class="Services Explained">
+                <!-- <h1>IaaS, PaaS and SaaS Explained by Simplilearn</h1> -->
+                <iframe src="https://www.youtube.com/embed/boY2i6qhPr8" frameborder="0" alt="IaaS, PaaS and SaaS Explained by Simplilearn"></iframe>
+            </div>
+            <div class="Serverless-video Explained">
+                <!-- <h1>Serverless Explained by IBM Cloud</h1> -->
+                <iframe src="https://www.youtube.com/embed/vxJobGtqKVM" frameborder="0" alt="Serverless Explained by IBM Cloud"></iframe>
+            </div>
+            <div class="TQ Explained">
+                <iframe src="https://www.youtube.com/embed/dsKIpLKo8AE" frameborder="0" alt="Serverless Explained by IBM Cloud"></iframe>
+            </div>
+            <div class="Definitions">
+                <h1>Definitions</h1>
+                <ul>
+                    <li>Cloud - Refers to the servers that are accessed via the internet </li>
+                    <li>IaaS - Infrastructure as a Service, a type of cloud computing service</li>
+                    <li>SaaS - Software as a Service, a type of cloud computing service</li>
+                    <li>PaaS - Platform as a Service, a type of cloud computing service</li>
+                    <li>Serverlesss - A type of cloud computing service</li>
+                    <li>API - Application Programming Interface, a tool used to gain access to a service's information and to make the service perform functions</li>
+                    <li>AWS - Amazon Web Services, a cloud provider </li>
+                    <li>Azure - Microsoft's cloud providing service </li>
+                    <li>Infrastructure - A general term used to describe all IT resources</li>
+                    <li>Internal Cloud - A private cloud thats used only inside the business</li>
+                    <li>Pay-As-You-Go - A payment system that allows a user to only pay the provider for the resources used</li>
+                </ul>
+                    <h1 class="Links">Links</h1>
+                <ul>
+                    <li><a href="https://www.ibm.com/cloud" target=”_blank” >IBM Cloud</a></li>
+                    <li><a href="https://aws.amazon.com/" target=”_blank” >Amazon Web Services</a></li>
+                    <li><a href="https://azure.microsoft.com/en-gb" target=”_blank” >Microsoft Azure</a></li>
+                    <li><a href="https://cloud.google.com/" target=”_blank” >Google Cloud</a></li>
+                </ul>
+            </div>
+        </main>
+    </body>
+</html>
