--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
                     <li><a href="/resources.html">Resources</a></li>
                 </ul>
             </nav>
-            <a href="#" class="cta"><button>Compare</button></a>
+            <a href="/compare.html" class="cta"><button>Compare</button></a>
         </header>
         <main class="Type-Grid">
             <div class="IaaS Container">
